--- a/tests/unit/financeCalculator.test.yml
+++ b/tests/unit/financeCalculator.test.yml
@@ -18,7 +18,7 @@ configuration:
   locale: en-US
 
 ---
-- test: Launch request, no further interaction.
+- test.only: Launch request, no further interaction.
 - LaunchRequest: # LaunchRequest is not an utterance but a request type and reserved word
   - response.outputSpeech.ssml:
     - Yes. How can I help?
